--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 </head>
 <body>
-    <div id="linechart"></div>
+    <div id="areachart"></div>
 
-    <script src="js/vega_lite_linechart.js"></script>
+    <script src="js/setup.js"></script>
 </body>
 </html>
