Formatting and styling of html/css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-              <h1>Multiple Visualisations</h1>
-              <p>This page demonstrates how you can use pure.css grid for your layout.</p>
+              <h1 style="margin-bottom: 10px;">AIR QUALITY IN THE U.S.</h1>
+              <p>By Andre Pham 31448232 for FIT3179, Homework Week 10.</p>
             </div>
         </div>
 
@@ -39,12 +39,9 @@
             </div>
         </div>
 
-        <h2>First and Second Columns Combined</h2>
+        <h2>Mean AQI Across CBSAs, 2021</h2>
         <div id="map" class="vis-container" style="height: 200%;"></div>
-        <p>The first and second columns are combined. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien
-            faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.
-        </p>
+        <p>The mean AQI (Air Quality Index) across CBSAs (core-based statistical areas). AQI range from 0-500, with greater numbers indicating poorer quality air. Graticule spacing is 5° between meridians and parallels.</p>
         
     </div>
 
