Text updates and further formatting

--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
         <div class="pure-g">
             <div class="pure-u-1-3">
                 <div class="description description-left">
-                    <h2>First and Second Columns Combined</h2>
-                    <p>The first and second columns are combined. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien
-                        faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.
-                    </p>
+                    <h2>U.S. Emissions of Volatile Organic Compounds</h2>
+                    <p>The total estimated emissions of volatile organic compounds (more info <a href="https://www.lung.org/clean-air/at-home/indoor-air-pollutants/volatile-organic-compounds#:~:text=Volatile%20organic%20compounds%2C%20or%20VOCs,they%20are%20in%20the%20air.">here</a>) produced by the U.S. between 1970 and 2019.</p>
+                    <p>*Annotations applied during filter.</p>
                 </div>
             </div>
             <div class="pure-u-2-3">
@@ -39,9 +37,9 @@
             </div>
         </div>
 
-        <h2>Mean AQI Across CBSAs, 2021</h2>
+        <h2 style="text-align: center;">Mean AQI Across CBSAs, 2021</h2>
         <div id="map" class="vis-container" style="height: 200%;"></div>
-        <p>The mean AQI (Air Quality Index) across CBSAs (core-based statistical areas). AQI range from 0-500, with greater numbers indicating poorer quality air. Graticule spacing is 5° between meridians and parallels.</p>
+        <p style="margin: auto;">The mean AQI (Air Quality Index) across CBSAs (core-based statistical areas). AQI range from 0-500, with greater numbers indicating poorer quality air. Graticule spacing is 5° between meridians and parallels.</p>
         
     </div>
 
