--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         <h2 style="text-align: center;">Mean AQI Across CBSAs, 2021</h2>
         <div id="map" class="vis-container" style="height: 200%;"></div>
         <p style="margin: auto;">The mean AQI (Air Quality Index) across CBSAs (core-based statistical areas). AQI range from 0-500, with greater numbers indicating poorer quality air. Graticule spacing is 5° between meridians and parallels.</p>
+
+        <br>
+		<br>
+
+		<hr class="solid">
+	
+		<p class="small-font" style="max-width: none;">
+			This visualisation was created by Andre Pham 31448232 for FIT3179. Licence CC by 4.0.
+			<br>
+            <a href="https://www.bts.gov/content/estimated-national-emissions-volatile-organic-compounds">Area chart dataset available here.</a>
+            <br>
+			<a href="https://www.kaggle.com/datasets/calebreigada/us-air-quality-1980present">Map dataset available here.</a>
+		</p>
         
     </div>
 
