--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="pure-u-1-3">
                 <div class="description description-left">
                     <h2>U.S. Emissions of Volatile Organic Compounds</h2>
-                    <p>The total estimated emissions of volatile organic compounds (more info <a href="https://www.lung.org/clean-air/at-home/indoor-air-pollutants/volatile-organic-compounds#:~:text=Volatile%20organic%20compounds%2C%20or%20VOCs,they%20are%20in%20the%20air.">here</a>) produced by the U.S. between 1970 and 2019.</p>
+                    <p>The total estimated emissions of volatile organic compounds (more info <a href="https://www.lung.org/clean-air/at-home/indoor-air-pollutants/volatile-organic-compounds#:~:text=Volatile%20organic%20compounds%2C%20or%20VOCs,they%20are%20in%20the%20air.">here</a>) produced by the U.S. between 1970 and 2019. Emissions have been going down, improving air quality.</p>
                     <p>*Annotations applied during filter.</p>
                 </div>
             </div>
